# grpc/server/data.go
@@ -4,11 +4,13 @@ import (
 	"context"
 
 	"github.com/google/uuid"
+	"github.com/jackc/pgtype"
 	"github.com/jackc/pgx/v4/pgxpool"
 	commonv1 "github.com/nanzhong/tstr/api/common/v1"
 	datav1 "github.com/nanzhong/tstr/api/data/v1"
 	"github.com/nanzhong/tstr/db"
 	"github.com/nanzhong/tstr/grpc/types"
+	"github.com/rs/zerolog"
 	"github.com/rs/zerolog/log"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
@@ -51,10 +53,18 @@ func (s *DataServer) GetTest(ctx context.Context, r *datav1.GetTestRequest) (*da
 			Msg("failed to parse env")
 		return nil, status.Error(codes.Internal, "failed to format run config env")
 	}
+	var labels map[string]string
+	if err := test.Labels.AssignTo(&labels); err != nil {
+		log.Error().
+			Err(err).
+			Stringer("test_id", test.ID).
+			Msg("failed to parse labels")
+		return nil, status.Error(codes.Internal, "failed to format labels")
+	}
 	pbTest := &commonv1.Test{
 		Id:           test.ID.String(),
 		Name:         test.Name,
-		Labels:       map[string]string{},
+		Labels:       labels,
 		CronSchedule: test.CronSchedule.String,
 		RunConfig: &commonv1.Test_RunConfig{
 			Id:             test.TestRunConfigID.UUID.String(),
@@ -100,7 +110,93 @@ func (s *DataServer) GetTest(ctx context.Context, r *datav1.GetTestRequest) (*da
 }
 
 func (s *DataServer) QueryTests(ctx context.Context, r *datav1.QueryTestsRequest) (*datav1.QueryTestsResponse, error) {
-	return nil, nil
+	var testIDs []uuid.UUID
+	for _, rid := range r.Ids {
+		id, err := uuid.Parse(rid)
+		if err != nil {
+			return nil, status.Error(codes.InvalidArgument, "failed to parse test id")
+		}
+		testIDs = append(testIDs, id)
+	}
+
+	var testSuiteIDs []uuid.UUID
+	for _, rid := range r.TestSuiteIds {
+		id, err := uuid.Parse(rid)
+		if err != nil {
+			return nil, status.Error(codes.InvalidArgument, "failed to parse test suite id")
+		}
+		testSuiteIDs = append(testSuiteIDs, id)
+	}
+
+	var labels pgtype.JSONB
+	if err := labels.Set(&r.Labels); err != nil {
+		log.Error().Err(err).Msg("failed to parse labels")
+		return nil, status.Error(codes.InvalidArgument, "failed to parse labels")
+	}
+
+	tests, err := s.dbQuerier.QueryTests(ctx, s.pgxPool, db.QueryTestsParams{
+		Ids:          testIDs,
+		TestSuiteIds: testSuiteIDs,
+		Labels:       labels,
+	})
+	if err != nil {
+		// NOTE []uuid.UUID can't be directly used as []fmt.Stringer
+		testIDStrings := make([]string, len(testIDs))
+		for i, s := range testIDs {
+			testIDStrings[i] = s.String()
+		}
+		testSuiteIDStrings := make([]string, len(testSuiteIDs))
+		for i, s := range testSuiteIDs {
+			testSuiteIDStrings[i] = s.String()
+		}
+		log.Error().
+			Err(err).
+			Strs("test_ids", testIDStrings).
+			Strs("test_suite_ids", testSuiteIDStrings).
+			Dict("labels", zerolog.Dict().Fields(labels)).
+			Msg("failed to query tests")
+	}
+
+	var pbTests []*commonv1.Test
+	for _, test := range tests {
+		var labels map[string]string
+		if err := test.Labels.AssignTo(&labels); err != nil {
+			log.Error().
+				Err(err).
+				Stringer("test_id", test.ID).
+				Msg("failed to parse labels")
+			return nil, status.Error(codes.Internal, "failed to format labels")
+		}
+		var env map[string]string
+		if err := test.Env.AssignTo(&env); err != nil {
+			log.Error().
+				Err(err).
+				Stringer("test_id", test.ID).
+				Msg("failed to parse env")
+			return nil, status.Error(codes.Internal, "failed to format run config env")
+		}
+		pbTests = append(pbTests, &commonv1.Test{
+			Id:           test.ID.String(),
+			Name:         test.Name,
+			Labels:       labels,
+			CronSchedule: test.CronSchedule.String,
+			RunConfig: &commonv1.Test_RunConfig{
+				Id:             test.TestRunConfigID.UUID.String(),
+				ContainerImage: test.ContainerImage.String,
+				Command:        test.Command.String,
+				Args:           test.Args,
+				Env:            env,
+				CreatedAt:      types.ToProtoTimestamp(test.CreatedAt),
+			},
+			NextRunAt:    types.ToProtoTimestamp(test.NextRunAt),
+			RegisteredAt: types.ToProtoTimestamp(test.RegisteredAt),
+			UpdatedAt:    types.ToProtoTimestamp(test.UpdatedAt),
+		})
+	}
+
+	return &datav1.QueryTestsResponse{
+		Tests: pbTests,
+	}, nil
 }
 
 func (s *DataServer) GetTestSuite(ctx context.Context, r *datav1.GetTestSuiteRequest) (*datav1.GetTestSuiteResponse, error) {
